RESOLVED FIXED48814
Attempting to redo typing in apple.com/startpage search field causes infinite recursion in TextControlInnerTextElement::defaultEventHandler
https://bugs.webkit.org/show_bug.cgi?id=48814
Summary Attempting to redo typing in apple.com/startpage search field causes infinite...
Adele Peterson
Reported 2010-11-01 17:58:56 PDT
Attempting to redo typing in apple.com/startpage search field causes infinite recursion in TextControlInnerTextElement::defaultEventHandler <rdar://problem/8546143>
Attachments
patch (4.58 KB, patch)
2010-11-01 18:01 PDT, Adele Peterson
tkent: review+
Adele Peterson
Comment 1 2010-11-01 18:01:31 PDT
Adele Peterson
Comment 2 2010-11-01 18:14:08 PDT
To get this to happen on the live site, you have to simulate a slow network connection. But the test I created always reproduces the problem.
Kent Tamura
Comment 3 2010-11-02 00:50:46 PDT
Comment on attachment 72612 [details] patch Looks good.
Adele Peterson
Comment 4 2010-11-02 10:59:37 PDT
Committed revision 71131.
Note You need to log in before you can comment on or make changes to this bug.